[package]
name = "line_bot_summarize"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
lazy_static = "1.4"
tokio-cron-scheduler = "0.9"
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-appender = "0.2"
base64 = "0.21"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
oauth2 = "4"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"

[dev-dependencies]
tempfile = "3"
